--- a/index.html
+++ b/index.html
@@ -104,24 +104,23 @@ header1{display: flex; width:100%;}
 <section id="section1"><img src="1.png" width="110"  height="110">
 </section>
 
-<section id="section2"><center><h2 id="titulo">Anime latino</h2></center>
+<section id="section2"><center><h2 id="titulo">TV play</h2></center>
 </section>
 
 <section id="section3">
-<div id="section4">Versión<br><h5>10.1(10)</h5>
+<div id="section4">Versión<br><h5>13(14)</h5>
 </div>
 <div id="linea"></div>
-<div id="section5">Tamaño<br><h5>15.81 MB</h5>
+<div id="section5">Tamaño<br><h5>15.83 MB</h5>
 </div>
 </section>
 </div>
   
 <div class="nav"> 
-<a href="Anime latino _developer-shop.apk" download="Anime latino _developer-shop" ><center>Descargar</center></a>
+<a href="TV play_Android-life.apk" download="TV play_Android-life" ><center>Descargar</center></a>
 </div>
   
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v16.0" nonce="dS7EkYw5"></script>
+
   
 <section id="section03">
 <div id="section08">
@@ -131,27 +130,33 @@ header1{display: flex; width:100%;}
 <div id="section05"><a href="#comentarios" ><center>Comentarios</center></a> 
 </div>
 </section>
+  
 <div class="main">
 <section id="section6">
-<img src="2.jpg" >
+<img src="2.png" >
 </section>
 <section id="section6">
-<img src="3.jpg"  >
+<img src="3.png"  >
 </section>
 <section id="section6">
-<img src="4.jpg" >
+<img src="4.png" >
 </section>
 <section id="section6">
-<img src="5.jpg" >
+<img src="5.png" >
 </section>
 <section id="section6">
-<img src="6.jpg" >
+<img src="6.png" >
+</section>
+<section id="section6">
+<img src="7.png" >
 </section>
 </div>
 
 <div class="footer">
 <p><pre>
-<h2>  Descripción:</h2></pre><br><p>Anime latino si te gusta ver anime en español latino está apk es para ti.
+<h2>  Descripción:</h2></pre><br><p>Bienvenidos a todos nuevamente, les comparto el link de descarga de la aplicación de tv...Poco a poco vamos agregando el contenido
+Haces click acá para descargar la aplicación https://bit.ly/41JIvYD
+La aplicación es gratuita
 </p>
 </div>
   
@@ -169,7 +174,7 @@ header1{display: flex; width:100%;}
 </div>
 </div>
 <div class="nombre1">
-DarkFreezer
+ TK Android
 </div>
 </header1>
 
@@ -180,14 +185,14 @@ DarkFreezer
 </div>
 </div>
 <div class="nombre1">
-brayanepalsa15@gmail.com
+gamerpro00javy@gmail.com
 </div>
 </header1>
 
 <header1>
 <div class="logo1">
 <div class="log1">
-<a href=" http://www.e-droid.net/privacy.php?ida=2446101&idl=en"><img src="privacidad.png " ></a>
+<a href="https://www.facebook.com/100087939535072/posts/pfbid02YdmHTALEPpKHx69QKZc4fTHKdnS9REeoqYcvcK7ons6mwt66GeVNfQWP1aLvc3GCl/?app=fbl"><img src="privacidad.png " ></a>
 </div>
 </div>
 <div class="nombre1">
@@ -196,7 +201,7 @@ Politica de privacidad
 </header1>  
   
 <div id="comentarios"></div>
-<div class="fb-comments" data-href="https://developer-shop.github.io/Anime-latino/" data-width="100" data-numposts="5"></div>
+
   
  <script type="text/javascript">(function(d, t, e, m){
     
