--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ header1{display: flex; width:100%;}
 <a href="TV play_Android-life.apk" download="TV play_Android-life" ><center>Descargar</center></a>
 </div>
   
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v16.0" nonce="9lHMCTRW"></script>
   
 <section id="section03">
 <div id="section08">
@@ -155,7 +156,7 @@ header1{display: flex; width:100%;}
 <div class="footer">
 <p><pre>
 <h2>  Descripción:</h2></pre><br><p>Bienvenidos a todos nuevamente, les comparto el link de descarga de la aplicación de tv...Poco a poco vamos agregando el contenido
-Haces click acá para descargar la aplicación https://bit.ly/41JIvYD
+Haces click acá para descargar la aplicación.<br><a>https://bit.ly/41JIvYD</a><br>
 La aplicación es gratuita
 </p>
 </div>
@@ -201,7 +202,7 @@ Politica de privacidad
 </header1>  
   
 <div id="comentarios"></div>
-
+<div class="fb-comments" data-href="https://developer-shop.github.io/TV-play/" data-width="100" data-numposts="5"></div>
   
  <script type="text/javascript">(function(d, t, e, m){
     
