--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@ header1{display: flex; width:100%;}
 <div class="footer">
 <p><pre>
 <h2>  Descripción:</h2></pre><br><p>Bienvenidos a todos nuevamente, les comparto el link de descarga de la aplicación de tv...Poco a poco vamos agregando el contenido
-Haces click acá para descargar la aplicación.<br><a>https://bit.ly/41JIvYD</a><br>
-La aplicación es gratuita
+Haces click acá para descargar la aplicación.<br>
+<a href="https://bit.ly/41JIvYD">https://bit.ly/41JIvYD</a><br>
+La aplicación es gratuita.
 </p>
 </div>
   
